--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -17,29 +17,59 @@ jobs:
 
       - name: Set Default Scheme
         run: |
+          # Obtener lista en json y tomar el primer scheme disponible (más fiable que targets)
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
-          echo $default > default
-          echo Using default scheme: $default
+          default_scheme=$(echo "$scheme_list" | ruby -e "require 'json'; j=JSON.parse(STDIN.read); puts (j['project']['schemes'] || []).first")
+          if [ -z "$default_scheme" ]; then
+            echo "ERROR: No se encontró scheme automáticamente. Lista completa:"
+            echo "$scheme_list"
+            exit 1
+          fi
+          echo "$default_scheme" > default
+          echo "Using default scheme: $default_scheme"
 
       - name: Build
         env:
-          scheme: default
-          platform: iOS Simulator
+          platform: "iOS Simulator"
         run: |
-          device=$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed "s/ Simulator$//")
+          # leer scheme (o usar default si no se pasó otro)
+          scheme=$(cat default)
+          echo "scheme: <$scheme>"
 
-          if [ "$scheme" = "default" ]; then scheme=$(cat default); fi
+          # Detectar primero workspace o project de forma robusta (solo el primer match)
+          workspace=$(ls -1 *.xcworkspace 2>/dev/null | head -n 1 || true)
+          project=$(ls -1 *.xcodeproj 2>/dev/null | head -n 1 || true)
 
-          if ls *.xcworkspace 1> /dev/null 2>&1; then
+          if [ -n "$workspace" ]; then
             filetype_parameter="workspace"
-            file_to_build=$(ls *.xcworkspace)
-          else
+            file_to_build="$workspace"
+          elif [ -n "$project" ]; then
             filetype_parameter="project"
-            file_to_build=$(ls *.xcodeproj)
+            file_to_build="$project"
+          else
+            echo "ERROR: No se encontró .xcworkspace ni .xcodeproj en el repo."
+            ls -la
+            exit 1
           fi
 
-          xcodebuild build \
+          echo "Using $filetype_parameter: <$file_to_build>"
+
+          # Device detection robusta (xcrun xctrace envia a stderr, por eso 2>&1)
+          device=$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed "s/ Simulator$//")
+          if [ -z "$device" ]; then
+            echo "ERROR: No se pudo detectar un simulador iPhone disponible."
+            xcrun simctl list
+            exit 1
+          fi
+          echo "device: <$device>"
+
+          # Debug: listar directorio antes de invocar xcodebuild
+          echo "Contenido del directorio:"
+          ls -la
+
+          # Ejecutar build (build-for-testing si luego quieres tests)
+          xcodebuild build-for-testing \
             -scheme "$scheme" \
             -"$filetype_parameter" "$file_to_build" \
-            -destination "platform=$platform,name=$device"
+            -destination "platform=$platform,name=$device" \
+            ONLY_ACTIVE_ARCH=NO
