Refactor iOS workflow for better scheme detection
Updated scheme detection logic and improved error handling in the iOS workflow.

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -17,12 +17,12 @@ jobs:
 
       - name: Set Default Scheme
         run: |
-          # Obtener lista en json y tomar el primer scheme disponible (más fiable que targets)
+          # Obtener lista en json y tomar el primer scheme disponible
           scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default_scheme=$(echo "$scheme_list" | ruby -e "require 'json'; j=JSON.parse(STDIN.read); puts (j['project']['schemes'] || []).first")
-          if [ -z "$default_scheme" ]; then
-            echo "ERROR: No se encontró scheme automáticamente. Lista completa:"
-            echo "$scheme_list"
+          default_scheme=$(echo "$scheme_list" | ruby -e "require 'json'; j=JSON.parse(STDIN.read); puts (j['project']['schemes'] || j['workspace']['schemes'] || []).first")
+          
+          if [ -z "$default_scheme" ] || [ "$default_scheme" == "null" ]; then
+            echo "ERROR: No se encontró scheme automáticamente."
             exit 1
           fi
           echo "$default_scheme" > default
@@ -32,44 +32,35 @@ jobs:
         env:
           platform: "iOS Simulator"
         run: |
-          # leer scheme (o usar default si no se pasó otro)
+          # Leer scheme guardado
           scheme=$(cat default)
-          echo "scheme: <$scheme>"
-
-          # Detectar primero workspace o project de forma robusta (solo el primer match)
+          
+          # Detectar workspace o project
           workspace=$(ls -1 *.xcworkspace 2>/dev/null | head -n 1 || true)
           project=$(ls -1 *.xcodeproj 2>/dev/null | head -n 1 || true)
 
           if [ -n "$workspace" ]; then
-            filetype_parameter="workspace"
+            file_flag="-workspace"
             file_to_build="$workspace"
           elif [ -n "$project" ]; then
-            filetype_parameter="project"
+            file_flag="-project"
             file_to_build="$project"
           else
-            echo "ERROR: No se encontró .xcworkspace ni .xcodeproj en el repo."
-            ls -la
+            echo "ERROR: No se encontró .xcworkspace ni .xcodeproj"
             exit 1
           fi
 
-          echo "Using $filetype_parameter: <$file_to_build>"
+          # Detección de dispositivo (iPhone 16 para asegurar compatibilidad con Xcode 16)
+          device="iPhone 16"
+          
+          echo "Building Scheme: $scheme"
+          echo "Using $file_flag: $file_to_build"
+          echo "Destination: $device"
 
-          # Device detection robusta (xcrun xctrace envia a stderr, por eso 2>&1)
-          device=$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed "s/ Simulator$//")
-          if [ -z "$device" ]; then
-            echo "ERROR: No se pudo detectar un simulador iPhone disponible."
-            xcrun simctl list
-            exit 1
-          fi
-          echo "device: <$device>"
-
-          # Debug: listar directorio antes de invocar xcodebuild
-          echo "Contenido del directorio:"
-          ls -la
-
-          # Ejecutar build (build-for-testing si luego quieres tests)
+          # Ejecutar build
+          # Nota: Se corrigió la sintaxis de -$filetype_parameter a $file_flag
           xcodebuild build-for-testing \
+            $file_flag "$file_to_build" \
             -scheme "$scheme" \
-            -"$filetype_parameter" "$file_to_build" \
             -destination "platform=$platform,name=$device" \
             ONLY_ACTIVE_ARCH=NO
